# trading-experiment

./: .gitignore  .pre-commit-config.yaml  clean.py  constants.py  db2csv.py  fetch.py  pyproject.toml  server.py  train.py  transform.py  transform2.py  validate.py
providers/: __init__.py  binance.py
serializers/: __init__.py  csv_serializer.py  db_serializer.py
transformers/: __init__.py  bollinger.py  ema.py  extra.py  indicators.py  labels.py  macd.py  rsi.py  squeeze_moment.py  volumes.py
