[tool.poetry]
name = "trading-experiment"
version = "0.1.0"
description = ""
authors = ["Levan Begashvili <life.long.learner127@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake9 = "^3.8.3.post2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
